--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+.dev.vars
+
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
@@ -33,8 +35,9 @@ yarn-error.log*
 # env files (can opt-in for committing if needed)
 .env*
 
-# vercel
-.vercel
+# cloudflare
+.open-next
+.wrangler
 
 # typescript
 *.tsbuildinfo
