--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
   "dependencies": {
     "@monaco-editor/react": "^4.7.0",
     "@opennextjs/cloudflare": "^1.16.5",
+    "@tailwindcss/typography": "^0.5.19",
     "jose": "^6.1.3",
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-markdown": "^10.1.0",
     "zustand": "^5.0.11"
   },
   "devDependencies": {
